# sensory

./: .gitignore  Architecture.md  CMakeLists.txt  Design.md  DesignLearn-A.md  DesignNotes-A.md  DesignNotes-B.md  DesignNotes-C.md  DesignNotes-D.md  DesignNotes-E.md  DesignNotes-F.md  DesignNotes-G.md  DesignNotes-H.md  DesignNotes-I.md  DesignNotes-J.md  DesignNotes-K.md  DesignNotes-L.md  DesignNotes.md  DesignNotes.txt  README.md
cmake/: CMakeLists.txt  SensoryConfig.cmake.in
examples/: README.md  demo.txt  file-read.scm  file-tail.scm  file-write.scm  filesys.scm  hints.scm  introspect.scm  irc-api.scm  irc-chat.scm  irc-echo-bot.scm  ollama-api.scm  ollama-bot.scm  ollama-embed.scm  parse-pipeline.scm  tcp-socket.scm  unix-socket.scm  xterm-bridge.scm  xterm-io.scm
examples-v0/: README.md  demo.txt  file-read.scm  file-write.scm  hints.scm  irc-api.scm  irc-echo-bot.scm  xterm-bridge.scm  xterm-io.scm
opencog/: CMakeLists.txt
opencog/atoms/: CMakeLists.txt
opencog/atoms-v0/filedir/: TextFileStream.h
opencog/atoms-v0/irc/: CMakeLists.txt  IRChatStream.h
opencog/atoms-v0/sensory/: CMakeLists.txt  LookatLink.h  OpenLink.h  OutputStream.h  StreamEqualLink.h  WriteLink.h
opencog/atoms-v0/terminal/: CMakeLists.txt  TerminalStream.h
opencog/atoms/filedir/: CMakeLists.txt  FileSysNode.cc  FileSysNode.h  FileSysStream.cc  FileSysStream.h  FileWatcher.cc  FileWatcher.h  README.md  TextFileNode.cc  TextFileNode.h  TextFileReader.cc  TextFileReader.h  TextFileStream.cc  TextFileStream.h
opencog/atoms/filedir-v0/: CMakeLists.txt  FileSysStream.cc  FileSysStream.h  README.md  TextFileStream.cc  TextFileStream.h
opencog/atoms/irc/: CMakeLists.txt  IRC.cc  IRC.h  IRChatNode.cc  IRChatNode.h  IRChatStream.cc  IRChatStream.h  README.md
opencog/atoms/irc-v0/: CMakeLists.txt  IRChatStream.cc  IRChatStream.h
opencog/atoms/ollama/: CMakeLists.txt  OllamaNode.cc  OllamaNode.h  README.md
opencog/atoms/sensory/: CMakeLists.txt  FileNode.cc  FileNode.h  LookatLink.h  LookupLink.cc  LookupLink.h  OpenLink.cc  OpenLink.h  OutputStream.cc  OutputStream.h  ReadStream.cc  ReadStream.h  SensoryNode.cc  SensoryNode.h  StreamEqualLink.cc  StreamEqualLink.h  StreamNode.cc  StreamNode.h  StringStream.cc  StringStream.h  TextFileNode.cc  TextFileNode.h  TextFileStream.cc  TextFileStream.h  TextStream.cc  TextStream.h  TextStreamNode.cc  TextStreamNode.h  TextWriterNode.cc  TextWriterNode.h  WriteLink.cc  WriteLink.h  sensory.scm
opencog/atoms/sensory-types/: CMakeLists.txt  README.md  sensory_types.script
opencog/atoms/sensory-v0/: CMakeLists.txt  LookatLink.cc  OpenLink.cc  OutputStream.cc  OutputStream.h  SensoryNode.cc  SensoryNode.h  StreamEqualLink.cc  StreamEqualLink.h  WriteLink.cc
opencog/atoms/sockets/: CMakeLists.txt  TcpSocketNode.cc  TcpSocketNode.h  UnixSocketNode.cc  UnixSocketNode.h
opencog/atoms/tcpsock/: CMakeLists.txt
opencog/atoms/terminal/: CMakeLists.txt  README.md  TerminalNode.cc  TerminalNode.h  TerminalStream.cc  TerminalStream.h
opencog/atoms/terminal-v0/: CMakeLists.txt  TerminalStream.cc
opencog/atoms/unixsock/: UnixSocketNode.cc  UnixSocketNode.h
opencog/cython/: CMakeLists.txt  sensory.pyx
opencog/cython-v0/: CMakeLists.txt  sensory.pxd  sensory_v0.pxd  sensory_v0.pyx
opencog/sensory/: CMakeLists.txt  sensory.scm
opencog/sensory-v0/: CMakeLists.txt  sensory-v0.scm
opencog/sensory-v0/types/: CMakeLists.txt  sensory_types.script  sensory_types_init.cc  sensory_v0_types.script  sensory_v0_types_init.cc
opencog/sensory/types/: CMakeLists.txt  README.md  sensory_types.script  sensory_types_init.cc
sandbox/: bootstrap.scm  count.scm  hamming.scm  observe.scm
tests/: CMakeLists.txt
tests/sensory/: CMakeLists.txt
tests/sensory/filedir/: CMakeLists.txt  filesys-watch-test.scm  tail-follow-test.scm  textfile-thread-test.scm
tests/sensory/ollama/: CMakeLists.txt  ollama-embed-test.scm
tests/sensory/sockets/: CMakeLists.txt  unix-socket-test.scm
tests/sensory/tcpsock/: tcp-socket-test.scm
tests/sensory/unixsock/: CMakeLists.txt  unix-socket-test.scm
